RC-2004-04-11-1: Bugfix:    Fixed a minor typo in manpage
                 Changed:   sge_conf.5

RC-2004-04-11-0: Cleanup:   Fixed the IA-64 Linux build
                 Changed:   aimk

SG-2004-04-10-0: Bugfix:    - fixed the qdel help output
                            - fixed qdel -u "*". The action is denied, if
                              a non manager wants to execute it.
                 Issue:     863, 903
                 Review:    pending
                 Changed:   qmaster, qdel

SG-2004-04-09-3: Bugfix:    The qmaster loged errors in case that a job in
                            T state was deleted. 
                 Review:    EB
                 Issue:     954
                 Changed:   qmaster

SG-2004-04-09-2: Bugfix:    If the qmaster is killed while jobs are deleted,
                            timed_event_thread error messages are reported
                            when the qmaster is starting up again. The order
                            in which the threads are stared has been changed.
                 Review:    AH
                 Changed:   qmaster

SG-2004-04-09-1: Bugfix:    - added the event handler for reschedule jobs
                            - fixed the TYPE_SIGNAL_RESEND_EVENT event
                 Review:    CR
                 Changed:   qmaster

SG-2004-04-08-0: Bugfix:    - timed event handler: TYPE_SIGNAL_RESEND_EVENT
                              was missing
                            - some jobs stayed in the system in delete status.
                              This happend due to some SGE v SGEEE code.
                 Review:    EB, AH, JG
                 Changed:   qmaster

JG-2004-04-08-0: Bugfix:    Fixed initialization of profiling in scheduler.
                            Enabling profiling in scheduler did also enable
                            profiling in qmaster.
                 Changed:   sge_qmaster, sge_schedd
                 Review:    SG
